# jaga

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  PRODUCT.md  README.md  package-lock.json  plan.md  run.ps1
.agent/: context-dump.md  data-evaluation-plan.md  design-guidelines.md  evidence-register.md  implementation-plan.md  log.md  plan-template.md  product-brief.md  product-requirements.md  project-architecture.md
apps/web/: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
backend/: .gitignore  README.md
backend/backendHandlers/: Dockerfile  README.md  go.mod
backend/go/: Dockerfile  README.md  go.mod
backend/modelServerandTraining/GemmaServer/rust/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/modelServerandTraining/GemmaServer/rust/jagaAudio/: Cargo.toml
backend/modelServerandTraining/GemmaServer/rust/jagaAudio/src/: lib.rs
backend/modelServerandTraining/GemmaServer/rust/xgboostService/: Cargo.toml
backend/modelServerandTraining/GemmaServer/rust/xgboostService/src/: config.rs  demographics.rs  fireworks.rs  main.rs  model.rs  preprocessor.rs  wavlm.rs
backend/modelServerandTraining/GemmaServer/rust/yamnetService/: Cargo.toml
backend/modelServerandTraining/GemmaServer/rust/yamnetService/src/: config.rs  main.rs  model.rs
components/: ClinicalCaptureForm.jsx
contracts/openapi/: jaga-v1.yaml
design/: contrast.mjs  swatch.html
docs/: architecture.md  backend-integration-map.md
frontend/: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  components.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/e2e/: gate-continue.spec.ts
frontend/public/: manifest.webmanifest
infra/: .env.example  README.md  docker-stack.yml
infra/cognee/: Dockerfile
infra/healthcheck/: api.sh  cognee.sh  prisma.sh
infra/nginx/: Dockerfile  bootstrap-cert.sh  nginx.conf
infra/postgres/: Dockerfile
infra/redis/: Dockerfile  redis.conf
infra/scripts/: build.ps1  build.sh  (+12 more)
(+313 files in other folders)
