[workspace]
resolver = "2"
members = ["jagaAudio", "yamnetService", "xgboostService"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
hound = "3.5"
dotenvy = "0.15"
thiserror = "2"
# load-dynamic: link onnxruntime.dll at runtime (avoids MSVC static-link toolset
# mismatch on Windows). Point ORT_DYLIB_PATH at the DLL (see .env.example).
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }

jagaAudio = { path = "jagaAudio" }
