[package]
name = "yamnetService"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "yamnetService"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
ort.workspace = true
jagaAudio.workspace = true
